--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <link rel="stylesheet" href="css/style.css">
+    <title>Whac-A-Mole</title>
 </head>
 <body>
-    <h1>Welcome to My Portfolio</h1>
-    <p>This is my first GitHub Pages site!</p>
+    <section>
+        <div class="banner">
+            <img src="imgsMole/Whac-A-Mole.jpg" alt="Imagem do jogo físico">
+        </div>
+    </section>
+    <footer>
+        <div class="nextPage">
+            <a href="regras.html" class="circulo">
+                <img src="imgsMole/arrow-down.png" alt="seta para baixo" class="arrow">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
